just playing about

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1>"Hello World"</h1>
+  <h1>Batman time</h1>
+  <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#product">Products</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li style="float:right"><a class="active" href="#about">About</a></li>
+</ul>
+  <img src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
 </body>
 </html>
