still just playing

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
   <link rel="stylesheet" href="main.css">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+  <body background="http://www.planwallpaper.com/static/images/Cool-Wallpapers-Background-HD-Wallpaper.jpg">
   <h1>Batman time</h1>
   <ul>
   <li><a href="#home">Home</a></li>
