because I'm batman, still just paying

--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-  <body background="http://www.planwallpaper.com/static/images/Cool-Wallpapers-Background-HD-Wallpaper.jpg">
-  <h1>Batman time</h1>
+  <div>
+  <h1>Because I'm Batman</h1>
   <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#product">Products</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li style="float:right"><a class="active" href="#about">About</a></li>
+  <li><a href="file:///Users/danparkes/Northcoder/website/index2.html">Various Movies</a></li>
+  <li style="float:right"><a class="active" href="file:///Users/danparkes/Northcoder/website/index.html">Refresh</a></li>
 </ul>
   <img src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
+  <p class = "quotes">"Batman: Black. All important movies start with a black screen. And music.
+    Edgy, scary music that would make a parent or studio executive nervous. And logos.
+    Really long and dramatic logos. Warner Bros. Why not Warner Brothers? I dunno. DC.
+    The house that Batman built. Yeah, what Superman? Come at me bro.
+    I'm your kryptonite. Hmm, not sure what RatPac does but that logo is macho.
+    I dig it. Okay, get yourself ready for some... reading.
+    If you wanna make the world a better place, take a look at yourself and make a change.
+    Hoooo. No, I said that. Batman is very wise. I also have huge pecs and a nine pack.
+    Yeah, I've got an extra ab. Now lets start the movie."</p>
+  <p> This is my website about <a href = "https://www.google.co.uk/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwixsKfV97zTAhXhJcAKHYgzCsMQFgg3MAM&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FBatman&usg=AFQjCNG-kG9H2r4xDibT0OrkCn6yKBzt9A&sig2=buigd9FPd5TNxHquhw_n3A">batman</a></p>
+</div>
 </body>
 </html>
