--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <div>
   <h1>Because I'm Batman</h1>
-  <ul>
-  <li><a href="file:///Users/danparkes/Northcoder/website/index2.html">Various Movies</a></li>
-  <li style="float:right"><a class="active" href="file:///Users/danparkes/Northcoder/website/index.html">Refresh</a></li>
-</ul>
+  <ul class = 'navbar'>
+    <li class = 'list'><a href="file:///Users/danparkes/Northcoder/website/variousMovies.html">Various Movies</a></li>
+    <li class = 'list'><a href="file:///Users/danparkes/Northcoder/website/contact.html">Contact</a></li>
+    <li style="float:right"><a class="active" href="file:///Users/danparkes/Northcoder/website/index.html">Main Page</a></li>
+  </ul>
   <img src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
   <p class = "quotes">"Batman: Black. All important movies start with a black screen. And music.
     Edgy, scary music that would make a parent or studio executive nervous. And logos.
