--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <link type="text/javascript" src="script.js">
   <link rel="stylesheet" href="main.css">
-  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <div>
   <h1>Because I'm Batman</h1>
-  <ul class = 'navbar'>
-    <li class = 'list'><a href="file:///Users/danparkes/Northcoder/website/variousMovies.html">Various Movies</a></li>
-    <li class = 'list'><a href="file:///Users/danparkes/Northcoder/website/contact.html">Contact</a></li>
-    <li style="float:right"><a class="active" href="file:///Users/danparkes/Northcoder/website/index.html">Main Page</a></li>
-  </ul>
-  <img src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
+  <header>
+    <div class="nav" id="one">
+      <a href="file:///Users/danparkes/Northcoder/website/index.html"><image class="icon"src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon1_zps5f01cb6e.png~c100"></a>
+        <p class="text">Home</p>
+    </div>
+
+    <div class="nav" id="two">
+      <a href="file:///Users/danparkes/Northcoder/website/variousMovies.html"><image class="icon"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjnfwZvjIKa-acIEO0c8jiw5kiv3wktjitDoRItWdYAy6uWh_v5Q"></a>
+        <p class="text">Movies</p>
+    </div>
+
+    <div class="nav" id="three">
+      <image class="icon"src="https://image.freepik.com/free-icon/question-mark_318-52837.jpg">
+        <p class="text">About</p>
+    </div>
+
+    <div class="nav" id="four">
+      <a href="file:///Users/danparkes/Northcoder/website/contact.html"><image class="icon"src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon2_zps07da45f2.png~c100"></a>
+        <p class="text">contact</p>
+    </div>
+    <div class="nav" id="five">
+      <image class="icon"src="https://cdn2.iconfinder.com/data/icons/perfect-flat-icons-2/512/Error_warning_alert_attention_remove_dialog.png">
+        <p class="text">Dare to Press</p>
+    </div>
+    <div class="nav" id="six">
+      <a href="file:///Users/danparkes/Northcoder/website/pictures.html"><image class="icon"src="http://www.freeiconspng.com/uploads/batman-icon-png-4.png"></a>
+        <p class="text">NUNUNUNU</p>
+    </div>
+
+  </header>
+  <img id = "batman" src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
   <p class = "quotes">"Batman: Black. All important movies start with a black screen. And music.
     Edgy, scary music that would make a parent or studio executive nervous. And logos.
     Really long and dramatic logos. Warner Bros. Why not Warner Brothers? I dunno. DC.
