--- a/index.html
+++ b/index.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <meta charset="utf-8">
   <link type="text/javascript" src="script.js">
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
   <div>
-  <h1>Because I'm Batman</h1>
-  <header>
-    <div class="nav" id="one">
-      <a href="file:///Users/danparkes/Northcoder/website/index.html"><image class="icon"src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon1_zps5f01cb6e.png~c100"></a>
-        <p class="text">Home</p>
-    </div>
+    <h1>Because I'm Batman</h1>
+    <header>
+        <div class="nav" id="one">
+    <a href="file:///Users/danparkes/Northcoder/website/index.html">
+      <image class="icon" src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon1_zps5f01cb6e.png~c100">
+    </a>
+    <p class="text">
+      Home
+    </p>
+  </div>
 
-    <div class="nav" id="two">
-      <a href="file:///Users/danparkes/Northcoder/website/variousMovies.html"><image class="icon"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjnfwZvjIKa-acIEO0c8jiw5kiv3wktjitDoRItWdYAy6uWh_v5Q"></a>
-        <p class="text">Movies</p>
-    </div>
+  <div class="nav" id="two">
+    <a href="file:///Users/danparkes/Northcoder/website/variousMovies.html">
+      <image class="icon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjnfwZvjIKa-acIEO0c8jiw5kiv3wktjitDoRItWdYAy6uWh_v5Q">
+    </a>
+    <p class="text">
+      Movies
+    </p>
+  </div>
 
-    <div class="nav" id="three">
-      <image class="icon"src="https://image.freepik.com/free-icon/question-mark_318-52837.jpg">
-        <p class="text">About</p>
-    </div>
+  <div class="nav" id="four">
+    <a href="file:///Users/danparkes/Northcoder/website/contact.html">
+      <image class="icon" src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon2_zps07da45f2.png~c100">
+    </a>
+    <p class="text">contact</p>
+  </div>
+  <div class="nav" id="six">
+    <a href="file:///Users/danparkes/Northcoder/website/pictures.html">
+      <image class="icon" src="http://www.freeiconspng.com/uploads/batman-icon-png-4.png">
+    </a>
+    <p class="text">NUNUNUNU</p>
+  </div>
 
-    <div class="nav" id="four">
-      <a href="file:///Users/danparkes/Northcoder/website/contact.html"><image class="icon"src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon2_zps07da45f2.png~c100"></a>
-        <p class="text">contact</p>
-    </div>
-    <div class="nav" id="five">
-      <image class="icon"src="https://cdn2.iconfinder.com/data/icons/perfect-flat-icons-2/512/Error_warning_alert_attention_remove_dialog.png">
-        <p class="text">Dare to Press</p>
-    </div>
-    <div class="nav" id="six">
-      <a href="file:///Users/danparkes/Northcoder/website/pictures.html"><image class="icon"src="http://www.freeiconspng.com/uploads/batman-icon-png-4.png"></a>
-        <p class="text">NUNUNUNU</p>
-    </div>
-
-  </header>
-  <img id = "batman" src = "http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
-  <p class = "quotes">"Batman: Black. All important movies start with a black screen. And music.
-    Edgy, scary music that would make a parent or studio executive nervous. And logos.
-    Really long and dramatic logos. Warner Bros. Why not Warner Brothers? I dunno. DC.
-    The house that Batman built. Yeah, what Superman? Come at me bro.
-    I'm your kryptonite. Hmm, not sure what RatPac does but that logo is macho.
-    I dig it. Okay, get yourself ready for some... reading.
-    If you wanna make the world a better place, take a look at yourself and make a change.
-    Hoooo. No, I said that. Batman is very wise. I also have huge pecs and a nine pack.
-    Yeah, I've got an extra ab. Now lets start the movie."</p>
-  <p> This is my website about <a href = "https://www.google.co.uk/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwixsKfV97zTAhXhJcAKHYgzCsMQFgg3MAM&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FBatman&usg=AFQjCNG-kG9H2r4xDibT0OrkCn6yKBzt9A&sig2=buigd9FPd5TNxHquhw_n3A">batman</a></p>
-</div>
+    </header>
+    <img id="batman" src="http://www.clipartkid.com/images/159/batman-trailer-feito-com-lego-PUUcUk-clipart.jpg">
+    <p class="quotes">"Batman: Black. All important movies start with a black screen. And music. Edgy, scary music that would make a parent
+      or studio executive nervous. And logos. Really long and dramatic logos. Warner Bros. Why not Warner Brothers? I dunno.
+      DC. The house that Batman built. Yeah, what Superman? Come at me bro. I'm your kryptonite. Hmm, not sure what RatPac
+      does but that logo is macho. I dig it. Okay, get yourself ready for some... reading. If you wanna make the world a
+      better place, take a look at yourself and make a change. Hoooo. No, I said that. Batman is very wise. I also have huge
+      pecs and a nine pack. Yeah, I've got an extra ab. Now lets start the movie."</p>
+    <p> This is my website about <a href="https://www.google.co.uk/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwixsKfV97zTAhXhJcAKHYgzCsMQFgg3MAM&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FBatman&usg=AFQjCNG-kG9H2r4xDibT0OrkCn6yKBzt9A&sig2=buigd9FPd5TNxHquhw_n3A">batman</a></p>
+  </div>
 </body>
+
 </html>
