removed contact page, fixed text

--- a/pictures.html
+++ b/pictures.html
@@ -26,13 +26,8 @@
     </p>
   </div>
 
-  <div class="nav" id="four">
-    <a href="file:///Users/danparkes/Northcoder/website/contact.html">
-      <image class="icon" src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon2_zps07da45f2.png~c100">
-    </a>
-    <p class="text">contact</p>
-  </div>
-  <div class="nav" id="six">
+ 
+  <div class="nav" id="three">
     <a href="file:///Users/danparkes/Northcoder/website/pictures.html">
       <image class="icon" src="http://www.freeiconspng.com/uploads/batman-icon-png-4.png">
     </a>
