--- a/variousMovies.html
+++ b/variousMovies.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="script.js"></script>
-  <h1>Movies, because you need to know</h1>
+  <h1>Where to find the dark knight</h1>
 </head>
 <header>
 
@@ -26,13 +26,8 @@
     </p>
   </div>
 
-  <div class="nav" id="four">
-    <a href="file:///Users/danparkes/Northcoder/website/contact.html">
-      <image class="icon" src="http://rs1377.pbsrc.com/albums/ah58/ebenhafkamp/icon2_zps07da45f2.png~c100">
-    </a>
-    <p class="text">contact</p>
-  </div>
-  <div class="nav" id="six">
+  
+  <div class="nav" id="three">
     <a href="file:///Users/danparkes/Northcoder/website/pictures.html">
       <image class="icon" src="http://www.freeiconspng.com/uploads/batman-icon-png-4.png">
     </a>
@@ -59,7 +54,7 @@
     <li>Justice League (2017)</li>
   </ul>
 
-  <iframe src="https://www.youtube.com/embed/X4HNqe2p2bQ" frameborder="0" allowfullscreen></iframe>
+  <iframe class="video" src="https://www.youtube.com/embed/X4HNqe2p2bQ" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
